--- a/public/assets/css/game.css
+++ b/public/assets/css/game.css
@@ -1,9 +1,9 @@
-.headerrow {
-    background-color:darkseagreen; 
+body {
+    background-color:rgb(178, 215, 178); 
   }
 
-  #messagePane {
-    background-color:rgb(212, 249, 212); 
+.headerrow, #messagePane {
+    background-color:rgb(224, 243, 224); 
   }
 
   .join_room_response, .left_room_response {
@@ -14,4 +14,20 @@
     font-size:125%;
     margin: 1px 1px 1px 1px;
     color:rgb(173, 49, 255)
+  }
+
+  table#game_board {
+    border: 4px solid black;
+    margin: 0px;
+    padding: 0px;
+  }
+
+  table#game_board td {
+    border: 1px solid black;
+    margin: 0px;
+    padding: 0px;
+  }
+
+  td.hovered_over:hover {
+    background-image: url("/assets/images/hover.gif");
   }
