--- a/public/assets/css/game.css
+++ b/public/assets/css/game.css
@@ -29,5 +29,5 @@ body {
   }
 
   td.hovered_over:hover {
-    background-image: url("/assets/images/hover.gif");
+    background-image: url('/assets/images/hover.gif');
   }
