--- a/public/assets/css/game.css
+++ b/public/assets/css/game.css
@@ -1,19 +1,24 @@
 body {
-    background-color:rgb(178, 215, 178); 
+    background-color:rgb(246, 233, 200); 
   }
 
 .headerrow, #messagePane {
-    background-color:rgb(224, 243, 224); 
+    background-color:rgb(176, 226, 215);
+    padding: 20px;
+    border-radius: 15px;
   }
 
   .join_room_response, .left_room_response {
-    background-color:rgb(225, 255, 164);
+    background-color:rgb(200, 160, 229);
+    border-radius: 10px;
+    padding: 20px;
   }
 
   .chat_message {
     font-size:125%;
     margin: 1px 1px 1px 1px;
-    color:rgb(173, 49, 255)
+    padding: 7px;
+    color:rgb(0, 0, 0)
   }
 
   table#game_board {
@@ -23,7 +28,7 @@ body {
   }
 
   table#game_board td {
-    background-color: rgb(255, 219, 161) ;
+    background-color: rgb(255, 245, 230) ;
     border: 1px solid black;
     margin: 0px;
     padding: 0px;
